--- a/Azure IoT Hub/Direct Method/Device/FanController/app_manifest.json
+++ b/Azure IoT Hub/Direct Method/Device/FanController/app_manifest.json
@@ -6,7 +6,7 @@
   "CmdArgs": [],
   "Capabilities": {
     "AllowedApplicationConnections": [],
-    "AllowedConnections": [ "w-iothub-azsphere.azure-devices.net" ],
+    "AllowedConnections": [ "xxx.azure-devices.net" ],
     "Gpio": [ "$FanPort" ],
     "AllowedTcpServerPorts": [  ]
   },
